--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         "office"
     ],
     "require": {
+        "phpoffice/phpspreadsheet": "^1.21"
     },
     "autoload": {
         "psr-4": {
